tests/ui/feature-gates/feature-gate-rustc-allow-const-fn-unstable.stderr
error[E0658]: use of an internal attribute
  --> $DIR/feature-gate-rustc-allow-const-fn-unstable.rs:3:1
   |
LL | #[rustc_allow_const_fn_unstable()]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: add `#![feature(rustc_attrs)]` to the crate attributes to enable
   = note: the `#[rustc_allow_const_fn_unstable]` attribute is an internal implementation detail that will never be stable
   = note: rustc_allow_const_fn_unstable side-steps feature gating and stability checks

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0658`.
